11-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: word-cloud-generator.test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wcg-service
            port:
              number: 8888
